[metadata]
name = rss-disorder-detection
version = 0.0.1
description = Handles data processing of AIRSS results and idenitifies regions or phases of disorder using cluster analysis on the density of structures in some metric space.

[options]
packages = find:
install_requires = 
    numpy
    scipy
    ase
    pymatgen
    matplotlib
    pandas
    scikit-learn
    dscribe

[options.entry_points]
console_scripts = 
    disorder = rss-disorder-detection.scripts.disorder:main

